Troubleshoot connection string for AzDO pipeline.

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -250,11 +250,47 @@ stages:
                     script: |
                       pwsh ./tests/playwright.ps1 install --with-deps
 
+                - task: PowerShell@2
+                  displayName: "Validate and Format Database Server Connection String"
+                  inputs:
+                    pwsh: true
+                    targetType: "inline"
+                    script: |
+                      $databaseServer = "$(DatabaseServer)"
+                      $databasePassword = "$(DatabasePassword)"
+                      
+                      if ([string]::IsNullOrWhiteSpace($databaseServer)) {
+                        Write-Error "DatabaseServer variable is not set or is empty"
+                        exit 1
+                      }
+                      
+                      Write-Host "Original DatabaseServer value: $databaseServer"
+                      
+                      # Ensure Azure SQL Database server name includes .database.windows.net suffix
+                      # If it doesn't already contain .database.windows.net, add it
+                      if ($databaseServer -notmatch '\.database\.windows\.net') {
+                        # Remove any trailing slashes or ports
+                        $serverName = $databaseServer.TrimEnd('/').Split(',')[0].Split(':')[0]
+                        $databaseServer = "$serverName.database.windows.net"
+                        Write-Host "Updated DatabaseServer to: $databaseServer"
+                      }
+                      
+                      # Remove tcp: prefix if present (we'll add it explicitly)
+                      $serverName = $databaseServer -replace '^tcp:', ''
+                      
+                      # Construct the connection string with explicit tcp: prefix and port 1433 for Azure SQL Database
+                      # This ensures TCP connection and avoids DNS resolution issues
+                      $connectionString = "Server=tcp:$serverName,1433;Database=ChurchBulletin;User ID=tdd;Password=$databasePassword;Encrypt=True;TrustServerCertificate=False;"
+                      
+                      # Set as pipeline variable for use in next step
+                      Write-Host "##vso[task.setvariable variable=FormattedConnectionString]$connectionString"
+                      Write-Host "Connection string formatted (password redacted): Server=tcp:$serverName,1433;Database=ChurchBulletin;User ID=tdd;Password=***;Encrypt=True;TrustServerCertificate=False;"
+
                 - task: VSTest@2
                   continueOnError: true
                   displayName: "VsTest - AcceptanceTests"
                   env:
-                    ConnectionStrings__SqlConnectionString: "Server=$(DatabaseServer);Database=ChurchBulletin;User ID=tdd;Password=$(DatabasePassword);Encrypt=True;TrustServerCertificate=False;"
+                    ConnectionStrings__SqlConnectionString: "$(FormattedConnectionString)"
                   inputs:
                     testSelector: "testAssemblies"
                     testAssemblyVer2: |
