--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -258,6 +258,7 @@ stages:
                     script: |
                       $databaseServer = "$(DatabaseServer)"
                       $databasePassword = "$(DatabasePassword)"
+                      $databaseName = "$(DatabaseName)"
                       
                       if ([string]::IsNullOrWhiteSpace($databaseServer)) {
                         Write-Error "DatabaseServer variable is not set or is empty"
@@ -280,11 +281,14 @@ stages:
                       
                       # Construct the connection string with explicit tcp: prefix and port 1433 for Azure SQL Database
                       # This ensures TCP connection and avoids DNS resolution issues
-                      $connectionString = "Server=tcp:$serverName,1433;Database=ChurchBulletin;User ID=tdd;Password=$databasePassword;Encrypt=True;TrustServerCertificate=False;"
-                      
-                      # Set as pipeline variable for use in next step
+                      $connectionString = "Server=tcp:$serverName,1433;Database=$databaseName;User ID=tdd;Password=$databasePassword;Encrypt=True;TrustServerCertificate=False;"
+
+                      # Set the environment variable for this session
+                      $env:ConnectionStrings__SqlConnectionString = "$connectionString"
+                      Write-Host "Pipeline variable FormattedConnectionString: $connectionString"
                       Write-Host "##vso[task.setvariable variable=FormattedConnectionString]$connectionString"
-                      Write-Host "Connection string formatted (password redacted): Server=tcp:$serverName,1433;Database=ChurchBulletin;User ID=tdd;Password=***;Encrypt=True;TrustServerCertificate=False;"
+                      Write-Host "Environment variable set to:"
+                      Write-Host $env:ConnectionStrings__SqlConnectionString
 
                 - task: VSTest@2
                   continueOnError: true
