--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -451,7 +451,7 @@ jobs:
           
 
   deploy-to-tdd:
-    name: Run acceptance tests and deploy to TDD
+    name: Deploy to TDD
     needs: [docker-build-image-for-churchbulletin-ui]
     if: success() 
     runs-on: ubuntu-latest
@@ -487,7 +487,7 @@ jobs:
 
 
       # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deploy to TDD via Octopus Deploy
+      - name: Deploy Octopus Release to TDD
         uses: OctopusDeploy/deploy-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -521,7 +521,7 @@ jobs:
 
 
       # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deplop to UAT via Octopus Deploy
+      - name: Deploy Octopus Release to UAT
         uses: OctopusDeploy/deploy-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -554,7 +554,7 @@ jobs:
 
 
       # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deploy to PROD via Octopus Deploy
+      - name: Deploy Octopus Release to PROD
         uses: OctopusDeploy/deploy-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
