--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -520,21 +520,23 @@ jobs:
           echo "Build version: $version"
 
 
-      # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deploy Octopus Release to UAT
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "UAT"
+      # Install Octopus CLI
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
+
+      # Promote release through lifecycle from TDD to UAT
+      - name: Promote Octopus Release to UAT
+        run: |
+          octo promote-release \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --apiKey ${{ secrets.OCTO_API_KEY }} \
+            --space '${{ vars.OCTOPUS_SPACE }}' \
+            --project '${{ vars.OCTOPUS_PROJECT }}' \
+            --from "TDD" \
+            --to "UAT" \
+            --releaseNumber "${{ env.VERSION }}"
   deploy-to-prod:
     name: Deploy to PROD
     needs: [deploy-to-uat]
@@ -553,18 +555,20 @@ jobs:
           echo "Build version: $version"
 
 
-      # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deploy Octopus Release to PROD
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "PROD"
+      # Install Octopus CLI
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
+
+      # Promote release through lifecycle from UAT to PROD
+      - name: Promote Octopus Release to PROD
+        run: |
+          octo promote-release \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --apiKey ${{ secrets.OCTO_API_KEY }} \
+            --space '${{ vars.OCTOPUS_SPACE }}' \
+            --project '${{ vars.OCTOPUS_PROJECT }}' \
+            --from "UAT" \
+            --to "PROD" \
+            --releaseNumber "${{ env.VERSION }}"
