--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -538,12 +538,12 @@ jobs:
             --to "UAT" \
             --releaseNumber "${{ env.VERSION }}"
   deploy-to-prod:
-    name: Deploy to PROD
+    name: Deploy to Prod
     needs: [deploy-to-uat]
     if: success() 
     runs-on: ubuntu-latest
     environment:
-      name: PROD
+      name: Prod
     
     steps:
       # Set version environment variable
@@ -570,7 +570,7 @@ jobs:
             --space '${{ vars.OCTOPUS_SPACE }}' \
             --project '${{ vars.OCTOPUS_PROJECT }}' \
             --from "UAT" \
-            --to "PROD" \
+            --to "Prod" \
             --releaseNumber "${{ env.VERSION }}" \
             --wait-for-deployment \
             --deployment-timeout "00:30:00"
