Refactor Octopus deployment workflow to install and authenticate Octopus CLI, promoting releases from TDD to UAT and UAT to Prod.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -520,20 +520,30 @@ jobs:
           echo "Build version: $version"
 
 
-      - name: Deploy Octopus Release to UAT
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "UAT"
+      # Install Octopus CLI
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v3
+        with:
+          version: latest
+
+      # Authenticate Octopus CLI
+      - name: Authenticate Octopus CLI
+        run: |
+          octopus login \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --api-key ${{ secrets.OCTO_API_KEY }}
+
+      # Promote release through lifecycle from TDD to UAT
+      - name: Promote Octopus Release to UAT
+        run: |
+          octopus release progression \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --api-key ${{ secrets.OCTO_API_KEY }} \
+            --space '${{ vars.OCTOPUS_SPACE }}' \
+            --project '${{ vars.OCTOPUS_PROJECT }}' \
+            --from "TDD" \
+            --to "UAT" \
+            --release "${{ env.VERSION }}"
 
   deploy-to-prod:
     name: Deploy to Prod
@@ -553,17 +563,27 @@ jobs:
           echo "Build version: $version"
 
 
-      - name: Deploy Octopus Release to Prod
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "Prod"
+      # Install Octopus CLI
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v3
+        with:
+          version: latest
+
+      # Authenticate Octopus CLI
+      - name: Authenticate Octopus CLI
+        run: |
+          octopus login \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --api-key ${{ secrets.OCTO_API_KEY }}
+
+      # Promote release through lifecycle from UAT to Prod
+      - name: Promote Octopus Release to Prod
+        run: |
+          octopus release progression \
+            --server ${{ secrets.OCTOPUS_URL }} \
+            --api-key ${{ secrets.OCTO_API_KEY }} \
+            --space '${{ vars.OCTOPUS_SPACE }}' \
+            --project '${{ vars.OCTOPUS_PROJECT }}' \
+            --from "UAT" \
+            --to "Prod" \
+            --release "${{ env.VERSION }}"
